k8s/apps/obsidian-livesync/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: couchdb
          image: public.ecr.aws/docker/library/couchdb:3.5.2@sha256:5fc596110eac7f412173a7d9de14f70aa5d3e816790fb6e70642755d4a4cf464
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/obsidian-livesync/data
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
