k8s/apps/obsidian-livesync/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`obsidian-sync.starry.blue`)
      services:
        - name: service-internal
          port: 8080
